@@ -1,3 +1,8 @@
+2006-12-14  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 3704
+	* bfdio.c (bfd_bread): Don't read past end of archive elements.
+
 2006-12-12  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* doc/Makefile.am (bfd_TEXINFOS): Set.
